Geo Fencing practice work included

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,14 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+# React Native Maps dependencies
+
+# ...existing code...
+rn_maps_path = '../node_modules/react-native-maps'
+pod 'react-native-google-maps', :path => rn_maps_path
+pod 'GoogleMaps'
+pod 'Google-Maps-iOS-Utils'
+# ...existing code...
 target 'fence' do
   config = use_native_modules!
 
@@ -22,6 +30,7 @@ target 'fence' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
 
   target 'fenceTests' do
     inherit! :complete
