--- a/ios/fence/Info.plist
+++ b/ios/fence/Info.plist
@@ -33,7 +33,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>This app needs to get yuur Location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +48,19 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to show the map</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to show the map</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need your location to show the map</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>GMSApiKey</key>
+	<string>AIzaSyBNCnuOJ70IX3fq76MZ3tYmQTM4zvT_KIg</string>
+
 </dict>
 </plist>
